[package]
name = "lushus-jwt"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
anyhow = "1"
chrono = "0.4"
futures ="0.3"
jsonwebtoken = "8"
rand = "0.8"
reqwest = "0.11"
reqwest-middleware = "0.2"
rsa = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "1"
http-cache-reqwest = "0.9.0"
