[package]
name = "lushus-jwt"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
actix-web = "4.3"
anyhow = "1"
chrono = "0.4"
futures ="0.3"
jsonwebtoken = "8"
log = "0.4"
rand = "0.8"
reqwest = "0.11"
reqwest-middleware = "0.2"
rsa = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "1"
http-cache-reqwest = "0.10.0"
